[package]
name = "schnorr_signature"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Abiodun <aabiodunawoyemi@gmail.com>"]
description = "This is schnorr signature implementation using arkwork"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
rand = "0.8.5"
sha2 = "0.10.8"
